--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             <div class="box">
                 <h2 class="subtitle">กราฟเวลาการเดินทางตามปริมาณน้ำฝน</h2>
                 <div id="graph-container" style="width: 100%; height: 400px;"></div>
+                <p class="note">หมายเหตุ: หากใช้งานเว็บไซต์ผ่านโทรศัพท์มือถือ แนะนำให้หมุนโทรศัพท์เป็นแนวนอน เพื่อให้เห็นกราฟได้อย่างละเอียด</p>
                 <p class="note">หมายเหตุ: ผลจากการคำนวณที่ได้จากโครงงานมีความคลาดเคลื่อนอันเนื่องมาจากปัจจัยอื่น ๆ ที่สามารถส่งผลกระทบต่อระยะเวลาในการเดินทางได้ เช่น สภาพการจราจร ช่วงเวลาในการเดินทาง สภาพถนน ฯลฯ โปรดใช้ผลการคำนวณอย่างมีวิจารณญาณ</p>
             </div>
             <div class="box">
